--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -38,15 +38,25 @@ jobs:
 
         echo "Building tweak in directory: $TWEAK_DIR"
         
-        # Change to the detected tweak directory and run make
+        # Change to the detected tweak directory
         cd $TWEAK_DIR
 
-        # Check if Makefile exists in the directory
-        if [ ! -f "Makefile" ]; then
+        # Automatically find the Makefile (case-insensitive search)
+        MAKEFILE=$(find . -type f -iname "Makefile" | head -n 1)
+        if [ -z "$MAKEFILE" ]; then
           echo "No Makefile found in $TWEAK_DIR, exiting."
           exit 1
         fi
+
+        echo "Using Makefile: $MAKEFILE"
         
+        # Check if the Makefile contains a valid TWEAK_NAME target
+        if ! grep -q "TWEAK_NAME" "$MAKEFILE"; then
+          echo "No valid target (TWEAK_NAME) found in Makefile, exiting."
+          exit 1
+        fi
+
+        # Run the build
         make clean || true  # Allow make clean to fail without stopping the process
         make
 
